fixing weird whitespacing. removing margin from body. sizing tracker correctly in standalone. added font awesome to standalone

--- a/desktop/renderer/style.css
+++ b/desktop/renderer/style.css
@@ -1,26 +1,26 @@
 /* Noto Sans */
 @font-face {
-	font-family: "Noto Sans";
-	font-style: normal;
-	font-weight: normal;
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: normal;
     src: url(fonts/NotoSans-Regular.ttf);
 }
 @font-face {
-	font-family: "Noto Sans Italic";
-	font-style: italic;
-	font-weight: normal;
+    font-family: "Noto Sans Italic";
+    font-style: italic;
+    font-weight: normal;
     src: url(fonts/NotoSans-Italic.ttf);
 }
 @font-face {
-	font-family: "Noto Sans Bold";
-	font-style: normal;
-	font-weight: bold;
+    font-family: "Noto Sans Bold";
+    font-style: normal;
+    font-weight: bold;
     src: url(fonts/NotoSans-Bold.ttf);
 }
 @font-face {
-	font-family: "Noto Sans Italic";
-	font-style: italic;
-	font-weight: bold;
+    font-family: "Noto Sans Italic";
+    font-style: italic;
+    font-weight: bold;
     src: url(fonts/NotoSans-BoldItalic.ttf);
 }
 
@@ -45,5 +45,6 @@
 }
 
 body {
-    font-family: 'Roboto'
+    font-family: 'Roboto';
+    margin: 0;
 }
